<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Perfil">
    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeRegister"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/casa_yellow"
                    android:tint="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textsaludo"
                    app:layout_constraintStart_toEndOf="@+id/imgbtn_back" />

                <TextView
                    android:id="@+id/textsaludo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgbtn_back" />

                <ImageButton
                    android:id="@+id/imgbtn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:background="@drawable/botoncircular"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>





    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logorojo"
        android:backgroundTint="@color/lightred"
        android:orientation="vertical">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/logorojofondo"
            app:layout_constraintBottom_toTopOf="@+id/btn_a_publicar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <Button
            android:id="@+id/btn_a_publicar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botoncircular"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/publicar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_avisodeprivacidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_avisodeprivacidad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botoncircular"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/avipriv"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_contacto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_contacto"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botoncircular"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/contacto"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_ayuda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_ayuda"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/botoncircular"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/ayuda"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_cerrarsesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cerrarsesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/botoncircular"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/cerrses"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
